--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         <div class="person-name"><h1>Eugene Gurov</h1></div>
         <div class="person-specialization"><p>Front-end Developer</p></div>
         <div class="person-socials">
-          <a href="" class="social fb"
-            ><svg
+          <a href="" class="social fb">
+            <svg
               width="14"
               height="14"
               viewBox="0 0 14 14"
